# cs150_project

./: README.md  pyproject.toml  sample_output.json
LLMProxy-main/c/: Makefile  README.md
LLMProxy-main/c/include/: llmproxy.h
LLMProxy-main/c/src/: llmproxy.c
hw_example/: README.md  games.py  main.py  player.py
scratch/: test_game_flow.ipynb  trivial_ultimatum_game.py
src/cs150_project/: agents.py  analysis.ipynb  constants.py  game.py  game_runner.py  llm_proxy_starter.py  models.py
src/cs150_project/game_results/: 12b46580-9b59-472c-8122-3fa2d5e89391.json  146d0d2e-6dde-4db3-9d87-ff86f3ca491c.json  5bd81b9c-2d42-41a8-88e0-44bfb13bd8fe.json  7f544b11-a2d4-49ea-ad33-c2aeeb069343.json  a5f9d312-fb45-47e7-ae27-65dd7c0b1c74.json
